--- a/src/adis16488_driver/package.xml
+++ b/src/adis16488_driver/package.xml
@@ -12,7 +12,9 @@
   <depend>rclcpp</depend>
   <depend>sensor_msgs</depend>
   <depend>tf2</depend>
-  <depend>tf2_geometry_msgs</depend>
+  <depend>tf2_geometry_msgs</depend>  
+  <depend>imu_filter_madgwick</depend>
+
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
