--- a/src/adis16488_driver/CMakeLists.txt
+++ b/src/adis16488_driver/CMakeLists.txt
@@ -17,7 +17,7 @@ add_executable(adis16488_node src/adis16488_node.cpp)
 target_include_directories(adis16488_node PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:include>)
-target_compile_features(adis16488_node PUBLIC c_std_99 cxx_std_17)  # Require C99 and C++17
+target_compile_features(adis16488_node PUBLIC c_std_99 cxx_std_17)  
 ament_target_dependencies(
   adis16488_node
   "rclcpp"
