--- a/src/qgc_bridge_cpp/CMakeLists.txt
+++ b/src/qgc_bridge_cpp/CMakeLists.txt
@@ -48,6 +48,10 @@ install(TARGETS
   mavlink_test
   DESTINATION lib/${PROJECT_NAME}
 )
+install(DIRECTORY
+  launch
+  DESTINATION share/${PROJECT_NAME}
+)
 
 install(DIRECTORY include/
   DESTINATION include/${PROJECT_NAME}
